--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,10 @@ h1 {
 
 /*-----------------------------*/
 
+.logo-worldseek {
+  width: 20%;
+}
+
 .home {
   display: flex;
   flex-direction: column;
@@ -40,7 +44,7 @@ h1 {
 
     .nav-button {
       padding: 0.8rem 1.5rem;
-      background-color: #007bff;
+      background-color: #2b2b2c;
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
@@ -65,6 +69,8 @@ h1 {
       flex-direction: column;
       align-items: center;
       text-align: center;
+      text-decoration: none;
+      color: #2b2b2c;
       background: #f8f9fa;
       padding: 1rem;
       border-radius: 8px;
@@ -87,5 +93,13 @@ h1 {
         font-weight: bold;
       }
     }
+  }
+}
+
+
+/* Breakpoint para pantallas pequeñas (móviles) */
+@media (max-width: 768px) {
+  .logo-worldseek {
+    width: 50%;
   }
 }
