--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,20 +1,35 @@
 // --- src/styles/main.scss ---
 @import "variables";
 
+// mixins 
+
+@mixin phone {
+  @media only screen and (max-width: 468px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media only screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+
 // src/styles/main.scss
 body {
   background-color: #f0f0f0;
   font-family: Arial, sans-serif;
 }
 
-h1 {
-  color: blue;
-}
-
 /*-----------------------------*/
 
 .logo-worldseek {
-  width: 20%;
+  width: 30%;
+
+  @include tablet {
+    width: 70%;
+  }
 }
 
 .home {
@@ -96,10 +111,43 @@ h1 {
   }
 }
 
+/*----------------------------*/
 
-/* Breakpoint para pantallas pequeñas (móviles) */
-@media (max-width: 768px) {
-  .logo-worldseek {
-    width: 50%;
+.about-page{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  text-align: center;
+  align-items: center;
+  padding-bottom: 15em;
+
+  .about-texto {
+    width: 40%;
+
+    @include tablet {
+      width: 80%;
+    }
+
+    @include phone {
+      width: 100%;
+    }
+  }
+  
+  h1 {
+    color: rgb(99, 99, 99);
+    font-size: 3em;
+  }
+
+  p{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: clamp(1em, 5vw, 1.6em);
+  }
+
+  .gifanimated {
+    display: flex;
+    width: 70%;
+    justify-content: center;
+    
   }
 }
+
