--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -4,9 +4,8 @@
     left: 0; 
     width: 100%; 
     background-color: #252525;
-    padding: 20px;
+    padding: 20px 0 20px 0;
     text-align: center;
-    font-size: 14px;
     color: #333;
     border-top: 1px solid #ddd;
   
@@ -19,7 +18,7 @@
   
     &__copyright {
       margin-top: 20px;
-      font-size: 20px;
+      font-size: clamp(0.5em, 5vw, 1.3em);
       color: #ffffff;
     }
   }
