--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -136,18 +136,19 @@ body {
   h1 {
     color: rgb(99, 99, 99);
     font-size: 3em;
+
+    @include tablet{
+      font-size: 3.2em;
+    }
+    @include phone {
+      font-size: clamp(1.2em, 5vw, 2.5em);
+    }
   }
 
   p{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: clamp(1em, 5vw, 1.6em);
+    font-size: clamp(0.5em, 5vw, 1.6em);
   }
 
-  .gifanimated {
-    display: flex;
-    width: 70%;
-    justify-content: center;
-    
-  }
 }
 
